# ur5e_welding

./: 2023-10-18-11-52-13.bag  Readme.md  data.csv
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/global_frame_registration/: adapter_pose_publisher  board_rec
devel/lib/optitrack/: instrument_calibration  instrument_pose_publisher  lowpass_filter_pose
devel/lib/pkgconfig/: global_frame_registration.pc  optitrack.pc  smooth_trajectory.pc  ur_ros.pc
devel/lib/ur_ros/: ur_ros_node
matlab/: doPlot.asv  doPlot.m  frechet.m
src/global_frame_registration/: CMakeLists.txt  README.md  package.xml
src/global_frame_registration/include/global_frame_registration/: board_recognition.hpp  global_frame_registration.hpp  quat_averaging.hpp
src/global_frame_registration/launch/: board_recognition.launch  davinci.launch  ecm_ml_psm1.launch  endoscope_left_eyeonbase.launch  endoscope_right_eyeonbase.launch  example.launch  frame_semantic_registration.launch  full.launch  psms+mesaL.launch  psms+mesaR.launch  psms.launch  rgbd_example.launch  right_psm1.launch  saras_ecm.launch  saras_holo.launch  saras_laparo.launch  saras_laparo_handeye.launch  saras_laparo_handeye_right_cam.launch  saras_laparo_magnet.launch  smart_trocar_inner_world.launch  smart_trocar_laparo.launch  smart_trocars_right_robot.launch  tmrb_Semantic.launch  ur_pointer.launch  welding_pointer.launch
src/global_frame_registration/matlab/: easy_handeye.m  evaluate_he.py  eye_on_base.m  hand_eye_dual_quaternion.m
src/global_frame_registration/rviz/: world_visualization.rviz
src/global_frame_registration/script/: convert_clicked.py
src/global_frame_registration/src/: adapter_pose_publisher.cpp  board_recognition.cpp  global_frame_registration.cpp
src/optitrack/: CMakeLists.txt
src/optitrack/config/: left.yaml  right.yaml
src/optitrack/launch/: edoardo_inst_pub.launch  instrument_calibration.launch  instrument_pose_publisher.launch  single_vertices_trajectory.launch  vrpn_client.launch
src/optitrack/src/: instrument_calibration.cpp  instrument_pose_publisher.cpp  lowpass_filter_pose.cpp  optitrack_trajectory.sh  record.sh  record_single_vertex.sh  rosbag_record.py  rosbag_single_vertex.py
src/smooth_trajectory/: CAD_parameters.txt  CMakeLists.txt
src/smooth_trajectory/launch/: clothoids.launch  complete_curve_circular.launch  complete_curve_line.launch  complete_curve_mix.launch  optitrack_trajectory.launch  record_robot_pose.launch  single_vertices_trajectory.launch
src/smooth_trajectory/src/: CAD_generator.py  clothoids.py  complete_curve_trajectory.py  complete_curve_trajectory_circular.py  complete_curve_trajectory_line.py  complete_curve_trajectory_mix.py  config.py  created_trajectory.py  data_CAD_registration.py  move_group_interface.py  optitrack_trajectory.py  primitives.py  record_robot_pose.py  rectangle_demo.py  set_configuration.py  single_vertices_trajectory.py  timing_law.py  utils.py  utils_only_vertices.py
src/ur_ros/: CMakeLists.txt
src/ur_ros/launch/: ur10.launch  ur3.launch  ur5.launch  ur5e.launch
src/ur_ros/src/: robot_kinematics.cpp  ur_ros_node.cpp
src/ur_ros/urdf/: ur10_joint_limited_robot.urdf.xacro  (+13 more)
(+337 files in other folders)
